Created SettingsActivity to handle user preferences - Created NutritionDialogPreference for selecting values of different nutrients - Added strings for user preferences

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,7 @@
     <string name="recipe_key" translatable="false">recipe</string>
     <string name="quantity_key" translatable="false">quantity</string>
     <string name="favorite_key" translatable="false">favorite</string>
-    <string name="calorie_key" translatable="false">calories</string>
-    <string name="my_recipes_key">my_recipes</string>
+
 
     <!-- Fractions -->
     <string name="one_quarter_fraction">\u00BC</string>
@@ -40,12 +39,12 @@
     <string name="format_author">Recipe by <xliff:g id="author">%s</xliff:g></string>
 
     <!-- Nutrition Info -->
-    <string name="nutrient_calories">Calories</string>
-    <string name="nutrient_fat">Fat</string>
-    <string name="nutrient_carbs">Carbs</string>
-    <string name="nutrient_protein">Protein</string>
-    <string name="nutrient_cholesterol">Cholesterol</string>
-    <string name="nutrient_sodium">Sodium</string>
+    <string name="nutrient_calories_title">Calories</string>
+    <string name="nutrient_fat_title">Fat</string>
+    <string name="nutrient_carbs_title">Carbs</string>
+    <string name="nutrient_protein_title">Protein</string>
+    <string name="nutrient_cholesterol_title">Cholesterol</string>
+    <string name="nutrient_sodium_title">Sodium</string>
 
     <string name="format_nutrient_calories">%d <xliff:g id="calorie_measurement">kcal</xliff:g></string>
     <string name="format_nutrient_fat">%.1f <xliff:g id="fat_measurement">g</xliff:g></string>
@@ -71,74 +70,16 @@
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
+    <!-- Nutrition Settings -->
+    <string name="pref_nutrition_title" translatable="false">Nutrition Settings</string>
 
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="pref_nutrition_key" translatable="false">nutrition</string>
+    <string name="pref_calorie_key" translatable="false">calories</string>
+    <string name="pref_fat_key" translatable="false">fat</string>
+    <string name="pref_carb_key" translatable="false">carb</string>
+    <string name="pref_protein_key" translatable="false">protein</string>
+    <string name="pref_cholesterol_key" translatable="false">cholesterol</string>
+    <string name="pref_sodium_key" translatable="false">sodium</string>
 
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <string-array name="multi_select_list_preference_default_value" />
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="my_recipes_key">my_recipes</string>
 </resources>
