--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,4 +82,5 @@
     <string name="pref_sodium_key" translatable="false">sodium</string>
 
     <string name="my_recipes_key">my_recipes</string>
+    <string name="title_activity_create_recipe">CreateRecipeActivity</string>
 </resources>
