--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">kitchen</string>
     <string name="action_settings">Settings</string>
+    <string name="action_clear_data">Clear Data \u0026 Restart</string>
     <string name="favorite_title">Favorites</string>
     <string name="my_recipes_title">My Recipes</string>
     <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
@@ -10,7 +11,6 @@
     <string name="recipe_key" translatable="false">recipe</string>
     <string name="quantity_key" translatable="false">quantity</string>
     <string name="favorite_key" translatable="false">favorite</string>
-
 
     <!-- Fractions -->
     <string name="one_quarter_fraction">\u00BC</string>
@@ -83,4 +83,16 @@
 
     <string name="my_recipes_key">my_recipes</string>
     <string name="title_activity_create_recipe">CreateRecipeActivity</string>
+
+    <!-- Main FAB Labels -->
+    <string name="fab_add_recipe">Create New Recipe</string>
+    <string name="fab_import_recipe">Import Recipe</string>
+    <string name="fab_close">Close</string>
+
+    <!-- Button Labels -->
+    <string name="button_confirm">OK</string>
+    <string name="button_deny">CANCEL</string>
+
+    <!-- Import Dialog -->
+    <string name="dialog_import_url_hint">Link to recipe</string>
 </resources>
