Additional preparations for importing from multiple sources
Created RecipeImporter class for automatically resolving and importing recipes from URL
- Detects the authority and launches the correct AsyncTask for importing recipe

Added new generalized method (getRecipeIdFromUrl) in Utilities
- Resolves URL, detects authority, and extracts recipeId

Replaced instances of calls authority-specific methods to the general methods created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,9 @@
 
     <!-- Import Dialog -->
     <string name="dialog_import_url_hint">Link to recipe</string>
+
+    <!-- Utility -->
+    <string name="http_scheme">http://</string>
+    <string name="allrecipes_authority">allrecipes.com</string>
+    <string name="allrecipes_www_authority">www.allrecipes.com</string>
 </resources>
