Started work on FavoritesActivity - Created alphabetical index on right side of layout for quick scrolling * Still need to work onTouchListener behavior *
Updated AllRecipesListAsyncTask
- Fixed bug where recipe name and description would truncate if it included double quotations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <!-- Attribution -->
     <string name="attribution_custom">user-added</string>
     <string name="attriubtion_allrecipes">Allrecipes.com</string>
+    <string name="title_activity_favorites">FavoritesActivity</string>
 </resources>
