--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,7 +100,7 @@
     <string name="dialog_import_url_hint">Link to recipe</string>
 
     <!-- Utility -->
-    <string name="http_scheme">http://</string>
+    <string name="http_scheme">http</string>
     <string name="allrecipes_authority">allrecipes.com</string>
     <string name="allrecipes_www_authority">www.allrecipes.com</string>
     <string name="custom_authority">user.custom</string>
