Started work on allowing user to create recipe books and organize their recipes within it - Modified RecipeContract to include entries for a recipe_books, chapters, and recipe_book_link tables - Updated RecipeDbHelper to create the new tables - **In progress** Working on updating RecipeProvider to be compatible for queries, insertions, deletions, and updates to the new tables - Created RecipeBookActivity for accessing recipe books
Refactored LinkEntry to LinkIngredientEntry to avoid confusion with the new LinkRecipeBookEntry

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,4 +134,5 @@
     <string name="attribution_custom">user-added</string>
     <string name="attriubtion_allrecipes">Allrecipes.com</string>
     <string name="title_activity_favorites">FavoritesActivity</string>
+    <string name="title_activity_recipe_book">RecipeBookActivity</string>
 </resources>
