--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,6 +104,10 @@
     <string name="dialog_recipebook_details_title">Recipe book title</string>
     <string name="dialog_recipebook_details_description">Recipe book description</string>
 
+    <!-- Chapter Details Dialog -->
+    <string name="dialog_chapter_details_title">Chapter title</string>
+    <string name="dialog_chapter_details_description">Chapter description</string>
+
     <!-- Utility -->
     <string name="http_scheme">http</string>
     <string name="allrecipes_authority">allrecipes.com</string>
