Added ability to re-arrange directions and ingredients - Utilize ItemTouchHelper to handle drag and swipe events - Added buttons for adding new ingredients and directions placed below their respective RecyclerViews
Updated AddIngredientAdapter to handle ItemTouchHandler's drag to rearrange
- Added OnStartDragListener triggered from touch event on the ViewHolder's handle
- Removed buttons to add and remove items from list
- Removed mAddList previously used to keep track of views to display in the ViewHolder
- Added touchpad to trigger drag to rearrange

Updated AddDirectionAdapter to handle ItemTouchHandler's drag to rearrange
- Added OnStartDragListener triggered from touch event on the ViewHolder's handle
- Removed buttons to add and remove items from list
- Removed mAddList previously used to keep track of views to display in the ViewHolder
- Added touchpad to trigger drag to rearrange

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,9 +136,11 @@
     <!-- List Item Add Ingredient Layout -->
     <string name="list_add_ingredient_quantity_hint">Quantity</string>
     <string name="list_add_ingredient_name_hint">Ingredient</string>
+    <string name="list_add_ingredient_text">Add an ingredient</string>
 
     <!-- List Item Add Directions Layout -->
     <string name="list_add_direction_hint">Start writing!</string>
+    <string name="list_add_direction_text">Add a direction</string>
 
     <!-- Attribution -->
     <string name="attribution_custom">user-added</string>
