Added ability to modify recipes within ChapterActivity - Added button enter edit mode in which the embedded RecipeAdapters switch to a compact view - In edit mode, recipes can be re-arranged by using the drag handle and removed by swiping - Database is correctly updated to reflect the user-changes
Modified RecipeAdapter
- When Cursor is swapped in, it creates an ArrayList containing all the values of the Cursor so that it can be modified during re-arrange/removal
- Added compact view layout for when user enters edit mode

Updated RecipeDetailsFragment
- Checks if attached to Activity prior to restarting the CursorLoader to prevent crashes if user exits before recipe is finished importing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="action_clear_data">Clear Data \u0026 Restart</string>
     <string name="action_save">Save Recipe</string>
     <string name="action_edit">Edit Recipe</string>
+    <string name="action_edit_mode">Recipe Order and Removal</string>
     <string name="action_clear_recipe">Clear Recipe</string>
     <string name="favorite_title">Favorites</string>
     <string name="my_recipes_title">My Recipes</string>
