Added ability to search for recipes by name in RecipeListActivity - EditText for search placed in toolbar that shows when clicking the search icon - SearchListener passes the search term from the Activity to the Fragment where the CursorLoader can add the argument

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,7 @@
     <string name="selection_key">selection</string>
     <string name="selection_args_key">selectionArgs</string>
     <string name="sort_order_key">sortOrder</string>
+
+    <!-- Search -->
+    <string name="search_hint">Search</string>
 </resources>
