--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_edit">Edit Recipe</string>
     <string name="action_edit_mode">Recipe Order and Removal</string>
     <string name="action_clear_recipe">Clear Recipe</string>
+    <string name="action_add_to_recipebook">Add to Recipe Book</string>
     <string name="favorite_title">Favorites</string>
     <string name="my_recipes_title">My Recipes</string>
     <string name="recipe_book_title">My Recipe Books</string>
