--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,6 +118,8 @@
     <string name="custom_authority">user.custom</string>
     <string name="food_authority">food.com</string>
     <string name="food_www_authority">www.food.com</string>
+    <string name="seriouseats_authority">seriouseats.com</string>
+    <string name="seriouseats_www_authority">www.seriouseats.com</string>
 
     <!-- Create Recipe -->
     <string name="create_recipe_name_hint">Recipe Name</string>
@@ -150,6 +152,7 @@
     <string name="attribution_custom">user-added</string>
     <string name="attribution_allrecipes">Allrecipes.com</string>
     <string name="attribution_food">Food.com</string>
+    <string name="attribution_seriouseats">Serious Eats</string>
 
     <string name="title_activity_favorites">FavoritesActivity</string>
     <string name="title_activity_recipe_book">RecipeBookActivity</string>
