Added ActivityMyRecipes for viewing recipes created and modified by the user - Basically a copy of ActivityFavorites but filtered for user-created/modified recipes
Renamed all UI classes for better organization

Various bug fixes
- Fixed bug where modifying a recipe in CreateRecipeActivity would crash the app or no ingredients would be added
- Fixed bug in FavoritesActivity where attemping to use AlphabeticalScrollingIndex while no recipes were favorited would cause crash
- Fixed bug where syncing recipes from SeriousEatsListAsync would cause a crash due to missing data-type
- Fixed bug where attempting to modify a recipe would fail to load ingredients
- Fixed bug in AdapterRecipe where custom recipes would not show the indicator overlay

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,4 +167,5 @@
 
     <!-- Search -->
     <string name="search_hint">Search</string>
+    <string name="title_activity_my_recipes">MyRecipesActivity</string>
 </resources>
