Add ability to import additional recipes when searching
Added option for user to click to import additional recipes from online
sources. Since only the front page of each web source is imported, the
user will often search for a recipe or ingredient that has never been
imported before. So far, only AllRecipes.com has been added as a search
source.

The search will return a List containing HashMaps with recipe
information. This way, only recipes that the user selects will be added
to the database.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,4 +171,5 @@
 
     <!-- Transition Strings -->
     <string name="transition_recipe_image">tn_recipe_image</string>
+    <string name="title_activity_search">ActivitySearch</string>
 </resources>
